css/stylesheet.css
/* ////////////////// global values /////////////////// */

html.main{
	margin:0;
	padding:0;
	background-color: #000000;
	scroll-behavior: smooth;			
}


body.main{
	margin: 0;
	overflow: hidden;
	padding: 0%;
	background-color: #000000;
	z-index: 1;
}

ul{
	list-style-type: none;
	margin: 0;
	padding: 0;
}

a{
	text-decoration: none;
	color: #ffffff;
	display: block;
	/*background-color: #4B4B4B;*/
	background-color: rgb(0, 0, 255);
}

a:hover{
	text-decoration: none;
	color: #000000;
	background-color: #ffffff;
}

a.imgL{
	text-decoration: none;
	display: block;
	background-color: #000000;
}

a.imgL:hover{
	text-decoration: none;
	background-color: #000000;
}


h1{
	text-align: center;
	font-family: 'Roboto Mono', monospace;
	color: #ffffff;
	font-size: 20px;
	position: relative;
}


h2{
	text-align: left;
	font-family: 'Roboto Mono', monospace;
	color: #ffffff;
	font-size: 20px;
	position: relative;
}

h3{
	text-align: left;
	font-family: 'Roboto Mono', monospace;
	color: #ffffff;
	font-size: 15px;
	font-weight: 200;
	position: relative;
}


p{
	text-align: left;
	font-family: 'Roboto Mono', monospace;
	color: #ffffff;
	font-size: 15px;
	position: relative;
}



hr.a{
	border-style: none;
  border-top: thin dotted rgb(255, 255, 255);
}

img{
	width: 100%;
}


li{
	float: left;
	/*border: .5px dashed white;*/
	/*width: 49.8%;*/
	width: 33.3%;
}

li.subLi{
	float:  left;
	width: 25%;
}

marquee{
	position: fixed;
	width: 88%;
	/*z-index: 2;*/
}

marquee.info{
	position: relative;
	width: 100%;
}


iframe.data, iframe.data2{
	position: relative;
	width: 100%;
	height: 50%;
	border-style: none;
	/*border: thin dashed rgb(255, 255, 255);*/
	overflow: hidden;
}


::-webkit-scrollbar{
	width: 0;
	height: 0;
}


/* /////////////////////// CUSTOM DIVS ////////////////////// */

.contFrame {
	position: fixed;
	overflow: hidden;
	top: 5%;
  	left: 5%;
  	bottom: 5%;
  	right: 5%;
	width: 90%;
	height: 90%;
	border-style: none;
	border: thin dashed rgb(255, 255, 255);
	z-index: 5;
}

#jsCont{
	position: fixed;
}

.imgLink{

	width: 100%;
	border-style: none;
	/*border: thin dotted rgb(255, 255, 255);*/
	transition: .2s;
}

.imgLink:hover{

	width: 100%;
	opacity: 0.5;
}


.espace{
	height: 5%;
}

.collapsible{
	display: none;
}

.subCont{
	padding-top: 1%;
	margin: 0;
}

.header{
	text-align: center;
	/*background-color: #000000;*/
	font-family: 'Roboto Mono', monospace;
	font-size: 20px;
	position: fixed;
	width: 89.9%;
	border: thin dashed rgb(255, 255, 255);
	z-index: 2;
	background-color: #000000;
	float: all;
}

.cntrls{
	top: 94%;
	position: fixed;
}

.tvMenu{
	text-align: center;
	/*background-color: #000000;*/
	font-family: 'Roboto Mono', monospace;
	font-size: 20px;
	position: relative;
	width: 100%;
	z-index: 1;
	/*background-color: #000000;*/
	float: left;
}

.grid-container{
	display: grid;
	grid-template-columns: auto auto auto;
	grid-column-gap: 1%;
	grid-row-gap: 1%;
	/*border: .5px dashed white;*/
}

.grid-container2{
	display: grid;
	grid-template-columns: auto auto;
	/*border: .5px dashed white;*/
}


.infoCont{
	float: left;
	padding-top: 2%;
	padding-left: 1%;
	padding-right: 1%;
	margin: 0;
	position: relative;
	width: 30%;
	height: 95.8%;
	overflow: scroll;
	-webkit-overflow:  scroll;
	z-index: -2;
}

.mainCont{
	float: left;
	padding-top: 2%;
	padding-left: 1%;
	padding-right: 1%;
	width: 65.9%;
	height: 95.8%;
	position: relative;
	overflow: scroll;
	border-left: thin dashed rgb(255, 255, 255);
	z-index: -2;
	/*clip: inherit;*/
}

.nftvCont{
	padding: 1%;
	width: 88%;
	height: 86%;
	position: fixed;
	/*left: 40%;*/
	overflow: scroll;
	z-index: -1;
	/*border-left: .5px dashed white;*/
}


.dispCont{
	position: relative;
	padding: 0%;
}


.headLine{
	display: block;
}

img.mob{
	display: none;
}

/* /////////////////// OUTSOURCED DIVS  ////////////////////// */

/* /////////////////// MEDIUM SCREEN  ////////////////////// */

@media screen and (max-width:  1200px){

.header{
	text-align: center;
	/*background-color: #000000;*/
	font-family: 'Roboto Mono', monospace;
	font-size: 20px;
	position: fixed;
	width: 99.3%;
	border: thin dashed rgb(255, 255, 255);
	z-index: 2;
	background-color: #000000;
	float: all;
}

.headLine{
	display: none;
}


.imgLink{

	width: 100%;
	border-style: none;
	transition: .2s;
}

.imgLink:hover{

	/*width: 99%;*/
	opacity: 0.5;
}

.contFrame{
	position: fixed;
	overflow: hidden;
	top: 0%;
  	left: 0%;
  	bottom: 0%;
  	right: 0%;
	width: 99.5%;
	height: 99.5%;
	border-style: none;
	border: thin dashed rgb(255, 255, 255);
}	

.infoCont{
	float: left;
	padding: 1%;
	top: 40px;
	position: relative;
	width: 98%;
	height: 99%;
	display: none;
}

.mainCont{
	float: left;
	padding: 1%;
	top: 40px;
	width: 98%;
	height: 99%;
	position: relative;
	border-style: none;
}

marquee{
	position: fixed;
	width: 97%;
}

iframe.data2{
	display: none;
}

.nftvCont{
	padding: 1%;
	top: 10px;
	width: 98%;
	height: 100%;
	left: 0;
	/*height: 100%;*/
	position: relative;
	border-style: none;
}

.subCont{
	padding-top: 2%;
	display: none;
}


.collapsible{
	padding: 0%;
	border-style: none;
	margin: 0;
	display: block;
	position: fixed;
	left: 0;
	top: 27px;
	float: all;
	width: 99.7%;
	border: thin dashed white;
	text-align: center;
	font-family: 'Roboto Mono', monospace;
	color: #ffffff;
	font-size: 20px;
	background-color: rgb(0, 0, 0);
	z-index: 1;
}

.collapsible:hover{
	background-color: #ffffff;
	color: #000000;
}

img.mob{
	display: block;
}

}



/* /////////////////// SMALL SCREEN  ////////////////////// */

@media screen and (max-width:  600px){

/*.grid-container{
	display: grid;
	grid-template-columns: auto;
}*/

/*.grid-container2{
	display: grid;
	grid-template-columns: auto;
}*/

.infoCont{
	float: left;
	padding: 1%;
	position: relative;
	width: 98%;
	display: none;
}

.mainCont{
	float: left;
	padding: 1%;
	width: 98%;
	position: relative;
	border-style: none;
}

.subCont{
	padding-top: 2%;
	display: none;
}


.collapsible:hover{
	background-color: #ffffff;
	color: #000000;
}

/*.cntrls{
	display: none;
}*/
}

